--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
      <!-- Sekcja główna ---------------------------------------------------------------------------------------------------------------------------------------------------------->
-    <section class="project-category">
+    <section class="project-category1">
         <h2>1.0 DOM KNAJP</h2>
         
         <!-- Podkategoria ---------------------------------------------------------------------------------------------------------------------------------------------------------->
@@ -359,7 +359,7 @@
     </section>
     
     <!-- Sekcja główna ---------------------------------------------------------------------------------------------------------------------------------------------------------->
-    <section class="project-category">
+    <section class="project-category2">
         <h2>2.0 DOM WOJCIECH/SOŁTYS</h2>
 
         <!-- Podkategoria ---------------------------------------------------------------------------------------------------------------------------------------------------------->
@@ -700,7 +700,7 @@
     </section>
 
     <!-- Sekcja główna ---------------------------------------------------------------------------------------------------------------------------------------------------------->
-    <section class="project-category">
+    <section class="project-category3">
         <h2>3.0 DOM DO 70m²</h2>
 
         <!-- Podkategoria ---------------------------------------------------------------------------------------------------------------------------------------------------------->
