--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="project-details">
                         <h3>WERSJA PODSTAWOWA</h3>
                         <a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">📁 Zobacz szczegóły</a>
-						<a href="https://skfb.ly/pqYDo" class="details-button">🧊 Model 3D</a>
+						<a href="https://skfb.ly/pqZAJ" class="details-button">🧊 Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-check-circle completed"></i>
