--- a/index.html
+++ b/index.html
@@ -668,6 +668,7 @@
                     <div class="project-details">
                         <h3>WERSJA Z WIATĄ</h3>
                         <a href="https://drive.google.com/drive/folders/161y_9CGoF59gciZ_wxiBr4xQxruCFppt?usp=sharing" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/pru8S" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -965,6 +966,7 @@
                     <div class="project-details">
                         <h3>WERSJA PODSTAWOWA</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
