--- a/index.html
+++ b/index.html
@@ -976,8 +976,9 @@
                 <div class="project-tile">
                     <img src="icons/342.jpg" alt="Projekt 2">
                     <div class="project-details">
-                        <h3>WERSJA Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAE" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -987,8 +988,9 @@
                 <div class="project-tile">
                     <img src="icons/343.jpg" alt="Projekt 3">
                     <div class="project-details">
-                        <h3>BLIŹNIAK Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 367c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAN" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
