--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                 <div class="project-tile">
                     <img src="icons/341.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
 						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
