--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 		<button id="toggle-all" class="toggle-all-button">Otwórz wszystkie</button>
     </header>
 
+
+
      <!-- Sekcja główna ---------------------------------------------------------------------------------------------------------------------------------------------------------->
     <section class="project-category1">
         <h2>1.0 DOM KNAJP</h2>
         
+
         <!-- Podkategoria ---------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section class="sub-category">
             <h3 class="toggle-button">1.1 DOM KNAJP (ANTRESOLA) ⇲</h3>
@@ -28,7 +31,7 @@
                 <div class="project-tile">
                     <img src="icons/111.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">Zobacz szczegóły</a>
 						<a href="https://skfb.ly/pqZAJ" class="details-button">Model 3D</a>
                     </div>
@@ -75,6 +78,7 @@
                     <div class="project-details">
                         <h3>WERSJA Z WIATĄ</h3>
                         <a href="https://drive.google.com/drive/folders/1oggu5gL5KL4YJkbpAUbL8K1YtrqXB0pH?usp=sharing" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/pqZAJ" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -113,7 +117,7 @@
                 <div class="project-tile">
                     <img src="icons/121.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1OdcIJ9m4yRY3tvDXLVj6nvMlc5Ld7Jsa?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -197,7 +201,7 @@
                 <div class="project-tile">
                     <img src="icons/131.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1vGDQqJllami6nFyIxFGaVYQCowIrN0Ge?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -281,7 +285,7 @@
                 <div class="project-tile">
                     <img src="icons/141.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1ot9dO-fb8XgFzIDREQ7PGNBg27j-cNzD?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -370,7 +374,7 @@
                 <div class="project-tile">
                     <img src="icons/211.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1CWH3kg1U15R7QO7QE6l7ZrDkP7279RqI?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -454,7 +458,7 @@
                 <div class="project-tile">
                     <img src="icons/221.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1XtHPD60aahnDTqdvjjdAQAQT-21rBVL8?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -538,7 +542,7 @@
                 <div class="project-tile">
                     <img src="icons/231.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1c0K3CwO0yzKaxc6Wr_0_TjRVDJQYzTYG?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -622,7 +626,7 @@
                 <div class="project-tile">
                     <img src="icons/241.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="https://drive.google.com/drive/folders/1I5shb2GUZy_BxnZFHb9wW3U67S6pXHi_?usp=sharing" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
@@ -712,8 +716,9 @@
                 <div class="project-tile">
                     <img src="icons/311.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -723,8 +728,9 @@
                 <div class="project-tile">
                     <img src="icons/312.jpg" alt="Projekt 2">
                     <div class="project-details">
-                        <h3>WERSJA Z GARAŻEM</h3>
+                        <h3>WERSJA Deskowanie</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -734,8 +740,9 @@
                 <div class="project-tile">
                     <img src="icons/313.jpg" alt="Projekt 3">
                     <div class="project-details">
-                        <h3>BLIŹNIAK Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -796,8 +803,9 @@
                 <div class="project-tile">
                     <img src="icons/321.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -807,8 +815,9 @@
                 <div class="project-tile">
                     <img src="icons/322.jpg" alt="Projekt 2">
                     <div class="project-details">
-                        <h3>WERSJA Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -818,8 +827,9 @@
                 <div class="project-tile">
                     <img src="icons/323.jpg" alt="Projekt 3">
                     <div class="project-details">
-                        <h3>BLIŹNIAK Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 310c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -880,8 +890,9 @@
                 <div class="project-tile">
                     <img src="icons/331.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA PODSTAWOWA</h3>
+                        <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -891,8 +902,9 @@
                 <div class="project-tile">
                     <img src="icons/332.jpg" alt="Projekt 2">
                     <div class="project-details">
-                        <h3>WERSJA Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -902,8 +914,9 @@
                 <div class="project-tile">
                     <img src="icons/333.jpg" alt="Projekt 3">
                     <div class="project-details">
-                        <h3>BLIŹNIAK Z GARAŻEM</h3>
+                        <h3>WERSJA Pantone 367c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -1043,7 +1056,7 @@
             </main>
         </section>
     </section>
-	
+
 
     <!-- JavaScript do rozwijania podkategorii -->
     <script>
@@ -1074,5 +1087,19 @@
 			}
 		});
     </script>
+	
+		<script>
+			// Pobranie wszystkich elementów .project-tile
+			var tiles = document.getElementsByClassName("project-tile");
+
+			// Dodanie obsługi kliknięcia na .project-tile, aby otworzyć zdjęcie w nowym oknie
+			for (var i = 0; i < tiles.length; i++) {
+				tiles[i].onclick = function() {
+					var img = this.getElementsByTagName("img")[0]; // Pobranie obrazka z klikniętej karty
+					// Otworzenie obrazka w nowym oknie z określonymi wymiarami
+					window.open(img.src, '_blank', 'width=800,height=600'); // Szerokość i wysokość nowego okna
+				}
+			}
+		</script>
 </body>
 </html>
