--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
 	
 		<script>
 			// Pobranie wszystkich elementów .project-tile
-			var tiles = document.getElementsByClassName("project-tile");
+			var tiles = document.getElementsByClassName("project-status");
 
 			// Dodanie obsługi kliknięcia na .project-tile, aby otworzyć zdjęcie w nowym oknie
 			for (var i = 0; i < tiles.length; i++) {
