--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxqZ" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -730,7 +730,7 @@
                     <div class="project-details">
                         <h3>WERSJA Deskowanie</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrn" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -742,7 +742,7 @@
                     <div class="project-details">
                         <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxr7" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -805,7 +805,7 @@
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrq" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -817,7 +817,7 @@
                     <div class="project-details">
                         <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrv" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -829,7 +829,7 @@
                     <div class="project-details">
                         <h3>WERSJA Pantone 310c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrx" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -892,7 +892,7 @@
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
                         <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrz" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -904,7 +904,7 @@
                     <div class="project-details">
                         <h3>WERSJA Pantone 150c</h3>
                         <a href="projekt2.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrA" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -916,7 +916,7 @@
                     <div class="project-details">
                         <h3>WERSJA Pantone 367c</h3>
                         <a href="projekt3.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+						<a href="https://skfb.ly/prxrB" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
