--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             font-family: 'PismoTech', sans-serif;
         }
         .header {
-            background-color: #4f81bd;
+            background-color: #35637c;
             padding: 20px;
             text-align: center;
             color: white;
@@ -56,7 +56,7 @@
             bottom: 0;
         }
         .btn-custom {
-            background-color: #4f81bd;
+            background-color: #35637c;
             color: white;
             border-radius: 10px;
             padding: 10px 60px;
@@ -64,7 +64,7 @@
             margin-top: 20px;
         }
         .btn-custom:hover {
-            background-color: #4f81bc;
+            background-color: #ccc;
         }
         .category img {
             width: 100%;
