--- a/blueprints/projekt111.html
+++ b/blueprints/projekt111.html
@@ -17,7 +17,7 @@
     <div class="container">
 	
         <div class="tile">
-		<img src="projekt1/341.png" alt="Aksonometria">
+		<img src="projekty/341.png" alt="Aksonometria">
 		</div>
 			
         <div class="tile">
@@ -48,25 +48,25 @@
         <div class="tile">
 					<div class="project-status">
 						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal1', 'projekt1/451.png')">👁️</button>
+						<button class="download-btn" onclick="openModal('modal1', 'projekty/451.png')">👁️</button>
 					</div>	
-				<img src="projekt1/451.png" alt="Projekt 2">
+				<img src="projekty/451.png" alt="Projekt 2">
 		</div>
 		
         <div class="tile">
 					<div class="project-status">
 						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal2', 'projekt1/452.png')">👁️</button>
+						<button class="download-btn" onclick="openModal('modal2', 'projekty/452.png')">👁️</button>
 					</div>	
-		<img src="projekt1/452.png" alt="Projekt 3">
+		<img src="projekty/452.png" alt="Projekt 3">
 		</div>
         
 		<div class="tile">
 					<div class="project-status">
 						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal3', 'projekt1/453.png')">👁️</button>
+						<button class="download-btn" onclick="openModal('modal3', 'projekty/453.png')">👁️</button>
 					</div>	
-		<img src="projekt1/453.png" alt="Projekt 4">
+		<img src="projekty/453.png" alt="Projekt 4">
 		</div>
 
 		
