--- a/K1.html
+++ b/K1.html
@@ -32,8 +32,8 @@
                     <img src="icons/111.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/pqZAJ" class="details-button">Model 3D</a>
+                        <a href="blueprints/projekt111.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-check-circle completed"></i>
