--- a/K2.html
+++ b/K2.html
@@ -326,8 +326,8 @@
                     <img src="icons/245.jpg" alt="Projekt 5">
                     <div class="project-details">
                         <h3>WERSJA Z WIATĄ</h3>
-                        <a href="https://drive.google.com/drive/folders/161y_9CGoF59gciZ_wxiBr4xQxruCFppt?usp=sharing" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/pru8S" class="details-button">Model 3D</a>
+						<a href="blueprints/projekt311.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://drive.google.com/drive/folders/161y_9CGoF59gciZ_wxiBr4xQxruCFppt?usp=sharing" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
