--- a/K3.html
+++ b/K3.html
@@ -29,11 +29,7 @@
                     <img src="icons/341.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-						<button class="btn" id="quickviewBtn">
-						<i class="fa fa-eye" aria-hidden="true"></i> Podgląd projektu
-						</button>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prtAG" class="details-button">Model 3D</a>
+                        <a href="blueprints/projekt341.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -119,8 +115,7 @@
                     <img src="icons/311.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxqZ" class="details-button">Model 3D</a>
+                        <a href="blueprints/projekt311.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -206,8 +201,7 @@
                     <img src="icons/321.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrq" class="details-button">Model 3D</a>
+                        <a href="blueprints/projekt321.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -293,8 +287,7 @@
                     <img src="icons/331.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrz" class="details-button">Model 3D</a>
+                        <a href="blueprints/projekt331.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
