--- a/projekt341.html
+++ b/projekt341.html
@@ -48,7 +48,7 @@
         <div class="tile">
 				<h2>RZUT PRZYZIEMIA</h2>
 					<div class="project-status">
-						<a href="projekty/341/RZUT PRZYZIEMIA - WERSJA PODSTAWOWA.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/341/341_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal1', 'projekty/341/2.png')">👁️</button>
 					</div>	
 				<img src="projekty/341/2.png" alt="Projekt 2">
@@ -57,7 +57,7 @@
         <div class="tile">
 				<h2>RZUT PODDASZA</h2>
 					<div class="project-status">
-						<a href="projekty/341/RZUT PODDASZA - WERSJA PODSTAWOWA.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/341/341_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal2', 'projekty/341/3.png')">👁️</button>
 					</div>	
 				<img src="projekty/341/3.png" alt="Projekt 3">
@@ -66,7 +66,7 @@
 		<div class="tile">
 				<h2>PRZEKRÓJ POPRZECZNY</h2>
 					<div class="project-status">
-						<a href="projekty/341/PRZEKRÓJ POPRZECZNY - WERSJA PODSTAWOWA.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/341/341_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal3', 'projekty/341/4.png')">👁️</button>
 					</div>	
 				<img src="projekty/341/4.png" alt="Projekt 4">
