--- a/projekt343.html
+++ b/projekt343.html
@@ -48,7 +48,7 @@
         <div class="tile">
 				<h2>RZUT PRZYZIEMIA</h2>
 					<div class="project-status">
-						<a href="projekty/343/RZUT PRZYZIEMIA - BLIŹNIAK Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/343/343_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal1', 'projekty/343/2.png')">👁️</button>
 					</div>	
 				<img src="projekty/343/2.png" alt="Projekt 2">
@@ -57,7 +57,7 @@
         <div class="tile">
 				<h2>RZUT PODDASZA</h2>
 					<div class="project-status">
-						<a href="projekty/343/RZUT PRZYZIEMIA - BLIŹNIAK Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/343/343_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal2', 'projekty/343/3.png')">👁️</button>
 					</div>	
 				<img src="projekty/343/3.png" alt="Projekt 3">
@@ -66,7 +66,7 @@
 		<div class="tile">
 				<h2>PRZEKRÓJ POPRZECZNY</h2>
 					<div class="project-status">
-						<a href="projekty/343/RZUT PRZYZIEMIA - BLIŹNIAK Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/343/343_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal3', 'projekty/343/4.png')">👁️</button>
 					</div>	
 				<img src="projekty/343/4.png" alt="Projekt 4">
