--- a/projekt344.html
+++ b/projekt344.html
@@ -48,7 +48,7 @@
         <div class="tile">
 				<h2>RZUT PRZYZIEMIA</h2>
 					<div class="project-status">
-						<a href="projekty/344/RZUT PRZYZIEMIA -  SZEREGOWA Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/344/344_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal1', 'projekty/344/2.png')">👁️</button>
 					</div>	
 				<img src="projekty/344/2.png" alt="Projekt 2">
@@ -57,7 +57,7 @@
         <div class="tile">
 				<h2>RZUT PODDASZA</h2>
 					<div class="project-status">
-						<a href="projekty/344/RZUT PRZYZIEMIA -  SZEREGOWA Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/344/344_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal2', 'projekty/344/3.png')">👁️</button>
 					</div>	
 				<img src="projekty/344/3.png" alt="Projekt 3">
@@ -66,7 +66,7 @@
 		<div class="tile">
 				<h2>PRZEKRÓJ POPRZECZNY</h2>
 					<div class="project-status">
-						<a href="projekty/344/RZUT PRZYZIEMIA -  SZEREGOWA Z GARAŻEM.pdf" download class="download-btn">PDF A4</a>
+						<a href="projekty/344/344_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
 						<button class="download-btn" onclick="openModal('modal3', 'projekty/344/4.png')">👁️</button>
 					</div>	
 				<img src="projekty/344/4.png" alt="Projekt 4">
