--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="project-tile">
                     <img src="icons/341.jpg" alt="Projekt 1">
                     <div class="project-details">
-                        <h3>WERSJA Podstawowa</h3>
+                        <h3>WERSJA<br>Podstawowa</h3>
                         <a href="projekt341.html" class="details-button">Zobacz szczegóły</a>
 						<a href="projekt1.html" class="details-button">Pliki</a>
                     </div>
@@ -43,7 +43,7 @@
                         <a href="projekt342.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -54,18 +54,18 @@
                         <a href="projekt343.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
                 <div class="project-tile">
                     <img src="icons/344.jpg" alt="Projekt 4">
                     <div class="project-details">
-                        <h3>SZEREGÓWKA z grażami</h3>
+                        <h3>SZEREGÓWKA<br>z grażami</h3>
                         <a href="projekt344.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
                         <a href="projekt345.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -87,18 +87,18 @@
                         <a href="projekt346.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
                 <div class="project-tile">
                     <img src="icons/347.jpg" alt="Projekt 7">
                     <div class="project-details">
-                        <h3>SZEREGÓWKA z wiatami</h3>
+                        <h3>SZEREGÓWKA<br>z wiatami</h3>
                         <a href="projekt347.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
             </main>
@@ -113,8 +113,8 @@
                     <img src="icons/311.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxqZ" class="details-button">Model 3D</a>
+                        <a href="projekt311.html" class="details-button">Zobacz szczegóły</a>
+						<a href="projekt1.html" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -200,8 +200,8 @@
                     <img src="icons/321.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrq" class="details-button">Model 3D</a>
+                        <a href="projekt321.html" class="details-button">Zobacz szczegóły</a>
+						<a href="projekt1.html" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -287,8 +287,8 @@
                     <img src="icons/331.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="projekt1.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrz" class="details-button">Model 3D</a>
+                        <a href="projekt331.html" class="details-button">Zobacz szczegóły</a>
+						<a href="projekt1.html" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
@@ -381,8 +381,8 @@
                     <img src="icons/111.jpg" alt="Projekt 1">
                     <div class="project-details">
                         <h3>WERSJA Podstawowa</h3>
-                        <a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/pqZAJ" class="details-button">Model 3D</a>
+                        <a href="projekt111.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://drive.google.com/drive/folders/1mV2i7Il2S_5olr7XHyTYTDucs7Go-DmS?usp=sharing" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
                         <i class="fas fa-check-circle completed"></i>
@@ -1020,8 +1020,8 @@
                     <img src="icons/245.jpg" alt="Projekt 5">
                     <div class="project-details">
                         <h3>WERSJA Z WIATĄ</h3>
-                        <a href="https://drive.google.com/drive/folders/161y_9CGoF59gciZ_wxiBr4xQxruCFppt?usp=sharing" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/pru8S" class="details-button">Model 3D</a>
+                        <a href="projekt245.html" class="details-button">Zobacz szczegóły</a>
+						<a href="https://drive.google.com/drive/folders/161y_9CGoF59gciZ_wxiBr4xQxruCFppt?usp=sharing" class="details-button">Pliki</a>						
                     </div>
                     <div class="project-status">
                         <i class="fas fa-times-circle not-completed"></i>
