--- a/projekt341.html
+++ b/projekt341.html
@@ -99,7 +99,9 @@
 
 
     <div class="footer">
-        <p>&copy; 2024</p>
+        <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
+				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
+				all rights reserved by ANDRZEJ KURKA</p>
     </div>
 	
 		<script>
