--- a/index.html
+++ b/index.html
@@ -1053,8 +1053,10 @@
         </section>
     </section>
 
-    <div class="footer">
-        <p>&copy; 2024</p>
+   <div class="footer">
+        <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
+				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
+				all rights reserved by ANDRZEJ KURKA</p>
     </div>
     <!-- JavaScript do rozwijania podkategorii -->
     <script>
