--- a/projekt343.html
+++ b/projekt343.html
@@ -98,8 +98,10 @@
 
 
 
-    <div class="footer">
-        <p>&copy; 2024</p>
+   <div class="footer">
+        <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
+				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
+				all rights reserved by ANDRZEJ KURKA</p>
     </div>
 	
 		<script>
