--- a/projekt341.html
+++ b/projekt341.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>DOM DO 70m² ZABUDOWY DACH 45°</h1>
+        <h1>IGOR</h1>
 		<h2>WERSJA PODSTAWOWA</h2>
     </header>
 	
@@ -98,10 +98,10 @@
 
 
 
-    <div class="footer">
+   <div class="footer">
         <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
 				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
-				all rights reserved by ANDRZEJ KURKA</p>
+				all rights reserved by ANDRZEJ KURKA | tel. <a href="tel:+48790820114">790 820 114</a></p>
     </div>
 	
 		<script>
