--- a/projekt344.html
+++ b/projekt344.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <h1>DOM DO 70m² ZABUDOWY DACH 45°</h1>
-		<h2>SZEREGÓWA Z GARAŻAMI</h2>
+        <h1>IGOR</h1>
+		<h2>SZEREGOWA Z GARAŻAMI</h2>
     </header>
 	
     <div class="container">
@@ -101,7 +101,7 @@
    <div class="footer">
         <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
 				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
-				all rights reserved by ANDRZEJ KURKA</p>
+				all rights reserved by ANDRZEJ KURKA | tel. <a href="tel:+48790820114">790 820 114</a></p>
     </div>
 	
 		<script>
