--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <!-- Link do Font Awesome do użycia ikon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <header>
-        <h1>SPIS PROJEKTÓW DO KATALOGU</h1>
-		<button id="toggle-all" class="toggle-all-button">Zamknij wszystkie</button>
+
+			
+	<header>
+				<h1>SPIS PROJEKTÓW DO KATALOGU</h1>
+				<button id="toggle-all" class="toggle-all-button">Zamknij wszystkie</button>
     </header>
+
+		<div id="contact-menu" class="contact-menu">
+			<a href="tel:+48790820114"><i class="fas fa-phone-alt" style="color: gray;"></i>	-	790 820 114</a>
+			<a href="mailto:eranpro@wp.pl"><i class="fas fa-envelope" style="color: gray;"></i>	-	eranpro@wp.pl</a>
+		</div>
 
     <!-- Sekcja główna ---------------------------------------------------------------------------------------------------------------------------------------------------------->
     <section class="project-category">
@@ -1087,6 +1095,5 @@
 			}
 		});
     </script>
-	
 </body>
 </html>
