--- a/projekt325.html
+++ b/projekt325.html
@@ -11,21 +11,21 @@
 <body>
     <header>
         <h1>NASTJA</h1>
-		<h2>WERSJA PODSTAWOWA</h2>
+		<h2>WERSJA Z WIATĄ</h2>
     </header>
 	
     <div class="container">
 	
         <div class="tile">
-		<img src="projekty/321/1.png" alt="Aksonometria">
+		<img src="projekty/325/1.png" alt="Aksonometria">
 		</div>
 			
         <div class="tile">
-		<iframe frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/2062cb77a4e946a39241cad8acbbcea8/embed"> </iframe>
+		<iframe frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/108449a0de4b4059b9ae83e978eca711/embed"> </iframe>
 		</div>
 		
         <div class="tile">
-			<h2>WERSJA PODSTAWOWA DANE OGÓLNE</h2>
+			<h2>WERSJA Z WIATĄ DANE OGÓLNE</h2>
 				<div class="data-grid">
 					<div class="label">Powierzchnia zabudowy:</div>
 					<div class="value"><strong>69,91 m²</strong></div>
@@ -48,28 +48,28 @@
         <div class="tile">
 				<h2>RZUT PRZYZIEMIA</h2>
 					<div class="project-status">
-						<a href="projekty/321/321_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal1', 'projekty/321/2.png')">👁️</button>
+						<a href="projekty/325/325_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal1', 'projekty/325/2.png')">👁️</button>
 					</div>	
-				<img src="projekty/321/2.png" alt="Projekt 2">
+				<img src="projekty/325/2.png" alt="Projekt 2">
 		</div>
 		
         <div class="tile">
 				<h2>RZUT PODDASZA</h2>
 					<div class="project-status">
-						<a href="projekty/321/321_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal2', 'projekty/321/3.png')">👁️</button>
+						<a href="projekty/325/325_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal2', 'projekty/325/3.png')">👁️</button>
 					</div>	
-				<img src="projekty/321/3.png" alt="Projekt 3">
+				<img src="projekty/325/3.png" alt="Projekt 3">
 		</div>
         
 		<div class="tile">
 				<h2>PRZEKRÓJ POPRZECZNY</h2>
 					<div class="project-status">
-						<a href="projekty/321/321_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal3', 'projekty/321/4.png')">👁️</button>
+						<a href="projekty/325/325_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal3', 'projekty/325/4.png')">👁️</button>
 					</div>	
-				<img src="projekty/321/4.png" alt="Projekt 4">
+				<img src="projekty/325/4.png" alt="Projekt 4">
 		</div>
 
 		
