--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<a href="projekt1.html" class="details-button">Pliki</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -134,10 +134,9 @@
                     <div class="project-details">
                         <h3>WERSJA<br>z garażem</h3>
                         <a href="projekt322.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrv" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -146,10 +145,9 @@
                     <div class="project-details">
                         <h3>BLIŹNIAK<br>z garażem</h3>
                         <a href="projekt323.html" class="details-button">Zobacz szczegóły</a>
-						<a href="https://skfb.ly/prxrx" class="details-button">Model 3D</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -160,7 +158,7 @@
                         <a href="projekt324.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -171,7 +169,7 @@
                         <a href="projekt325.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -182,7 +180,7 @@
                         <a href="projekt326.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
 
@@ -193,7 +191,7 @@
                         <a href="projekt327.html" class="details-button">Zobacz szczegóły</a>
                     </div>
                     <div class="project-status">
-                        <i class="fas fa-times-circle not-completed"></i>
+                        <i class="fas fa-check-circle completed"></i>
                     </div>
                 </div>
             </main>
